* fix footer spacing bug * fix not existent logo in footer for firefox

--- a/src/layouts/all.scss
+++ b/src/layouts/all.scss
@@ -579,7 +579,7 @@ main {
     .related-posts {
 
       position: absolute;
-      bottom: 220px;
+      bottom: 139px;
       left: 0;
       right: 0;
       display: flex;
